--- a/index.html
+++ b/index.html
@@ -224,10 +224,10 @@
             </div>
             <ul class="nav-links" style="display: flex; flex-direction: row; justify-content: center; gap: 16px; padding: 10px 0; position: relative; z-index: 999;">
               <li class="highlight-link" style="list-style: none;">
-                <a href="/leaderboard/rainbet" style="display: inline-block; padding: 10px 16px; text-decoration: none; color: white; position: relative; z-index: 1000;">LEADERBOARD</a>
+                <a href="/leaderboard/rainbet" style="display: inline-block; padding: 10px 16px; text-decoration: none; color: white; position: relative; z-index: 1000;">RAINBET</a>
               </li>
               <li class="highlight-link" style="list-style: none;">
-                <a href="/raffle" style="display: inline-block; padding: 10px 16px; text-decoration: none; color: white; position: relative; z-index: 1000;">WEEKLY RAFFLE</a>
+                <a href="/leaderboard/shock" style="display: inline-block; padding: 10px 16px; text-decoration: none; color: white; position: relative; z-index: 1000;">SHOCK</a>
               </li>
             </ul>
         </nav>
