--- a/index.html
+++ b/index.html
@@ -212,9 +212,9 @@
         <div class="left-glow"></div>
         <div class="right-glow"></div>
     </div>
-    <object type="image/png" data="/assets/left-rainbet.png" id="leftsvg" height="100%">
+    <object type="image/png" data="" id="leftsvg" height="100%">
     </object>
-    <object type="image/png" data="/assets/right-rainbet.png" id="rightsvg" height="100%">
+    <object type="image/png" data="" id="rightsvg" height="100%">
     </object>
     <header>
         <nav>
