--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                       <div class="vertical-line"></div>
       <div class="image-wrapper">
         <img class="game-image clash-image" id="clashImage2" src="https://gambizard.vercel.app/assets/rainbet.png"
-             style="cursor: pointer;opacity: 1;" onclick="window.location.href='/leaderboard/csbattle'">
+             style="cursor: pointer;opacity: 1;" onclick="window.location.href='/leaderboard/shock'">
         <div class="label">
                         <div class="price-wrapper leaderboard-outline">
                             $ 250
