--- a/index.html
+++ b/index.html
@@ -462,9 +462,9 @@
         <img src="/assets/tiktok.png" alt="Tiktok Logo" class="icon" />
         <span>@TH3NUK3</span>
     </a>
-    <a href="https://www.instagram.com/the_dailynuke" target="_blank" class="card youtube">
+    <a href="https://www.instagram.com/Nuketup" target="_blank" class="card youtube">
         <img src="/assets/instagram.png" alt="YouTube Logo" class="icon" />
-        <span>@the_dailynuke</span>
+        <span>@Nuketup</span>
     </a>
     <a href="https://discord.gg/pU5NU7BnhH" target="_blank" class="card discord">
         <img src="/assets/discord.png" alt="Discord Logo" class="icon" />
@@ -542,7 +542,7 @@
             <img src="/assets/tiktok.png" alt="Tiktok Logo" class="social-img">
             <span>Tiktok</span>
         </a>
-        <a href="https://www.instagram.com/the_dailynukee" target="_blank" class="social">
+        <a href="https://www.instagram.com/Nuketup" target="_blank" class="social">
             <img src="/assets/instagram.png" alt="Instagram Logo" class="social-img">
             <span>Instagram</span>
         </a>
