--- a/leaderboard/shock/index.html
+++ b/leaderboard/shock/index.html
@@ -405,7 +405,7 @@
             <img src="/assets/tiktok.png" alt="Tiktok Logo" class="social-img">
             <span>Tiktok</span>
         </a>
-        <a href="https://www.instagram.com/the_dailynukee" target="_blank" class="social">
+        <a href="https://www.instagram.com/Nuketup" target="_blank" class="social">
             <img src="/assets/instagram.png" alt="Instagram Logo" class="social-img">
             <span>Instagram</span>
         </a>
