--- a/leaderboard/shock/index.html
+++ b/leaderboard/shock/index.html
@@ -461,8 +461,8 @@
 <script src="/js/particles.js"></script>
 <script src="/js/toast.js"></script>
 <script>
-const CURRENT_API_URL = 'https://nukedata.vercel.app/leaderboard/current';
-const PREVIOUS_API_URL = 'https://nukedata.vercel.app/leaderboard/previous';
+const CURRENT_API_URL = 'https://nukedata.vercel.app/leaderboard/top14';
+const PREVIOUS_API_URL = 'https://nukedata.vercel.app/leaderboard/prev';
 const roobetLogo = 'https://gambizard.vercel.app/assets/rainbetlogo.png';
 const rewards = [50, 120, 25, 25, 10, 10, 10];
 const top3Glows = ['0 0 40px #C0C0C0', '0 0 40px #FFD700', '0 0 40px #CD7F32'];
