--- a/rewards/index.html
+++ b/rewards/index.html
@@ -1,260 +1,198 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <title>NUKE</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Exclusive wager races on Rainbet for code NUKE!">
-    <link rel="icon" type="image/jpg" href="/assets/logo.png">
-    <link rel="stylesheet" type="text/css" href="/css/app.css">
-    <link rel="stylesheet" type="text/css" href="/css/lb.css">
-    <link rel="stylesheet" type="text/css" href="/css/vendor.css">
-    <link rel="stylesheet" type="text/css" href="/css/cards.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-    <link rel="stylesheet" type="text/css" href="/css/toast.css">
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <style>
-        /* Wager rewards section */
-        .rank-rewards-section {
-            padding: 50px 20px;
-            background: #0d0d0d;
-            text-align: center;
-        }
-
-        .bonus-title {
-            font-size: 2.5rem;
-            margin-bottom: 40px;
-            text-shadow: 0 0 10px #00bfff;
-        }
-
-        .rank-rewards-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-            gap: 25px;
-            justify-items: center;
-        }
-
-        .rank-card {
-            background: #1a1a1a;
-            padding: 20px;
-            border-radius: 15px;
-            box-shadow: 0 0 15px #00bfff55;
-            color: #fff;
-            transition: transform 0.3s, box-shadow 0.3s;
-            text-align: center;
-        }
-
-        .rank-card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 0 25px #00ffff;
-        }
-
-        .rank-image {
-            width: 60px;
-            margin-bottom: 15px;
-        }
-
-        .rank-name {
-            font-size: 1.2rem;
-            margin-bottom: 10px;
-            color: #00bfff;
-        }
-
-        .rank-wager {
-            font-size: 0.95rem;
-            margin-bottom: 10px;
-        }
-
-        .rank-reward {
-            font-size: 1.1rem;
-            font-weight: bold;
-            margin-bottom: 15px;
-            color: #ffd700;
-        }
-
-        .claim-button {
-            background-color: #5865f2;
-            color: #fff;
-            border: none;
-            padding: 8px 14px;
-            border-radius: 8px;
-            cursor: pointer;
-            font-weight: bold;
-            transition: background 0.3s;
-        }
-
-        .claim-button:hover {
-            background-color: #4752c4;
-        }
-
-        /* Footer socials */
-        .footer-socials {
-            margin-top: 15px;
-        }
-
-        .footer-socials a {
-            color: #fff;
-            margin-right: 10px;
-            font-size: 1.3rem;
-            transition: color 0.3s;
-        }
-
-        .footer-socials a:hover {
-            color: #00bfff;
-        }
-    </style>
+<title>NUKE</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description" content="Exclusive wager races on Rainbet for code NUKE!">
+<meta property="og:image" content="https://i.ibb.co/zWHCmvk8/image.png">
+<link rel="icon" type="image/jpg" href="/assets/logo.png">
+<link rel="stylesheet" type="text/css" href="/css/app.css">
+<link rel="stylesheet" type="text/css" href="/css/lb.css">
+<link rel="stylesheet" type="text/css" href="/css/vendor.css">
+<link rel="stylesheet" type="text/css" href="/css/cards.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+<link rel="stylesheet" type="text/css" href="/css/toast.css">
+<style>
+  /* Reduced styles for wager rewards */
+  .rank-rewards-section {
+    max-width: 960px;
+    margin: 0 auto;
+    padding: 1em 0;
+  }
+  .section-title {
+    text-align: center;
+    margin-bottom: 1em;
+  }
+  .bonus-title {
+    font-size: 2rem;
+    font-weight: 700;
+  }
+  .rank-rewards-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
+    gap: 20px;
+    padding: 0 16px;
+  }
+  .rank-card {
+    background: #121212;
+    border: 2px solid var(--primary-blue);
+    border-radius: 12px;
+    padding: 16px;
+    color: white;
+    text-align: center;
+    box-shadow: 0 0 25px var(--primary-blue);
+  }
+  .rank-name {
+    font-size: 1.3rem;
+    margin: 12px 0 8px;
+    font-weight: 900;
+  }
+  .rank-wager {
+    margin-bottom: 8px;
+    font-size: 1rem;
+  }
+  .rank-reward {
+    font-size: 1.5rem;
+    color: var(--accent-gold);
+    margin-bottom: 16px;
+    font-weight: 900;
+  }
+  .claim-button {
+    cursor: pointer;
+    background-color: var(--primary-blue);
+    color: white;
+    border: none;
+    padding: 10px 16px;
+    border-radius: 8px;
+    font-weight: 900;
+    box-shadow: 0 0 20px var(--primary-blue);
+    transition: background-color 0.3s ease;
+  }
+  .claim-button:hover {
+    background-color: var(--accent-gold);
+    color: black;
+  }
+</style>
 </head>
-
 <body>
-    <header>
-        <nav>
-            <div class="logo-title">
-                <img src="/assets/logo.png" alt="Site logo" class="logo">
-                <h1 class="title">NUKE</h1>
-            </div>
-        </nav>
-    </header>
 
-    <main class="rank-rewards-section">
-        <div class="section-title">
-            <h2 class="bonus-title">
-                <span style="color: var(--primary-blue)">WAGER REWARDS</span>
-            </h2>
-        </div>
-        <div class="rank-rewards-grid">
-            <!-- Replace the src with a local image you have -->
-            <div class="rank-card">
-                <img src="/assets/reward-icon.png" alt="Reward Icon" class="rank-image">
-                <h3 class="rank-name">$10K Wager</h3>
-                <div class="rank-wager">Required Wager: <span style="font-weight: bold; color: white;">$10,000</span></div>
-                <div class="rank-reward">$15</div>
-                <button class="claim-button" onclick="claimReward('10K Wager', 15)">Claim</button>
-            </div>
-            <div class="rank-card">
-                <img src="/assets/reward-icon.png" alt="Reward Icon" class="rank-image">
-                <h3 class="rank-name">$25K Wager</h3>
-                <div class="rank-wager">Required Wager: <span style="font-weight: bold; color: white;">$25,000</span></div>
-                <div class="rank-reward">$35</div>
-                <button class="claim-button" onclick="claimReward('25K Wager', 35)">Claim</button>
-            </div>
-            <div class="rank-card">
-                <img src="/assets/reward-icon.png" alt="Reward Icon" class="rank-image">
-                <h3 class="rank-name">$50K Wager</h3>
-                <div class="rank-wager">Required Wager: <span style="font-weight: bold; color: white;">$50,000</span></div>
-                <div class="rank-reward">$60</div>
-                <button class="claim-button" onclick="claimReward('50K Wager', 60)">Claim</button>
-            </div>
-            <div class="rank-card">
-                <img src="/assets/reward-icon.png" alt="Reward Icon" class="rank-image">
-                <h3 class="rank-name">$100K Wager</h3>
-                <div class="rank-wager">Required Wager: <span style="font-weight: bold; color: white;">$100,000</span></div>
-                <div class="rank-reward">$120</div>
-                <button class="claim-button" onclick="claimReward('100K Wager', 120)">Claim</button>
-            </div>
-            <div class="rank-card">
-                <img src="/assets/reward-icon.png" alt="Reward Icon" class="rank-image">
-                <h3 class="rank-name">$150K Wager</h3>
-                <div class="rank-wager">Required Wager: <span style="font-weight: bold; color: white;">$150,000</span></div>
-                <div class="rank-reward">$175</div>
-                <button class="claim-button" onclick="claimReward('150K Wager', 175)">Claim</button>
-            </div>
-            <div class="rank-card">
-                <img src="/assets/reward-icon.png" alt="Reward Icon" class="rank-image">
-                <h3 class="rank-name">$200K Wager</h3>
-                <div class="rank-wager">Required Wager: <span style="font-weight: bold; color: white;">$200,000</span></div>
-                <div class="rank-reward">$250</div>
-                <button class="claim-button" onclick="claimReward('200K Wager', 250)">Claim</button>
-            </div>
-            <div class="rank-card">
-                <img src="/assets/reward-icon.png" alt="Reward Icon" class="rank-image">
-                <h3 class="rank-name">$250K Wager</h3>
-                <div class="rank-wager">Required Wager: <span style="font-weight: bold; color: white;">$250,000</span></div>
-                <div class="rank-reward">$300</div>
-                <button class="claim-button" onclick="claimReward('250K Wager', 300)">Claim</button>
-            </div>
-            <div class="rank-card">
-                <img src="/assets/reward-icon.png" alt="Reward Icon" class="rank-image">
-                <h3 class="rank-name">$325K Wager</h3>
-                <div class="rank-wager">Required Wager: <span style="font-weight: bold; color: white;">$325,000</span></div>
-                <div class="rank-reward">$400</div>
-                <button class="claim-button" onclick="claimReward('325K Wager', 400)">Claim</button>
-            </div>
-            <div class="rank-card">
-                <img src="/assets/reward-icon.png" alt="Reward Icon" class="rank-image">
-                <h3 class="rank-name">$400K Wager</h3>
-                <div class="rank-wager">Required Wager: <span style="font-weight: bold; color: white;">$400,000</span></div>
-                <div class="rank-reward">$500</div>
-                <button class="claim-button" onclick="claimReward('400K Wager', 500)">Claim</button>
-            </div>
-            <div class="rank-card">
-                <img src="/assets/reward-icon.png" alt="Reward Icon" class="rank-image">
-                <h3 class="rank-name">$500K Wager</h3>
-                <div class="rank-wager">Required Wager: <span style="font-weight: bold; color: white;">$500,000</span></div>
-                <div class="rank-reward">$1,000</div>
-                <button class="claim-button" onclick="claimReward('500K Wager', 1000)">Claim</button>
-            </div>
-        </div>
-    </main>
+<header>
+  <nav>
+    <div class="logo-title">
+      <img src="/assets/logo.png" alt="Site logo" class="logo">
+      <h1 class="title">NUKE</h1>
+    </div>
+  </nav>
+</header>
 
-    <footer>
-        <div class="row inner-footer" style="margin-top: 50px;">
-            <div class="col-5">
-                <div class="content">
-                    <span class="copyright">NUKE<br> All Right Reserved 2025.</span>
-                    <div class="footer-socials">
-                        <a href="#" target="_blank"><i class="fab fa-tiktok"></i></a>
-                        <a href="#" target="_blank"><i class="fab fa-youtube"></i></a>
-                        <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
-                        <a href="#" target="_blank"><i class="fab fa-discord"></i></a>
-                        <a href="#" target="_blank"><i class="fab fa-kickstarter"></i></a>
-                    </div>
-                </div>
-            </div>
+<main class="rank-rewards-section">
+  <div class="section-title">
+    <h2 class="bonus-title">
+      <span style="color: var(--primary-blue)">WAGER REWARDS</span>
+    </h2>
+  </div>
+  <div class="rank-rewards-grid">
+    <div class="rank-card">
+      <h3 class="rank-name">$10K Wager</h3>
+      <div class="rank-wager">Required Wager: <span style="font-weight: bold; color: white;">$10,000</span></div>
+      <div class="rank-reward">$15</div>
+      <button class="claim-button" onclick="claimReward('10K Wager', 15)">Claim</button>
+    </div>
+    <div class="rank-card">
+      <h3 class="rank-name">$25K Wager</h3>
+      <div class="rank-wager">Required Wager: <span style="font-weight: bold; color: white;">$25,000</span></div>
+      <div class="rank-reward">$35</div>
+      <button class="claim-button" onclick="claimReward('25K Wager', 35)">Claim</button>
+    </div>
+    <div class="rank-card">
+      <h3 class="rank-name">$50K Wager</h3>
+      <div class="rank-wager">Required Wager: <span style="font-weight: bold; color: white;">$50,000</span></div>
+      <div class="rank-reward">$60</div>
+      <button class="claim-button" onclick="claimReward('50K Wager', 60)">Claim</button>
+    </div>
+    <div class="rank-card">
+      <h3 class="rank-name">$100K Wager</h3>
+      <div class="rank-wager">Required Wager: <span style="font-weight: bold; color: white;">$100,000</span></div>
+      <div class="rank-reward">$120</div>
+      <button class="claim-button" onclick="claimReward('100K Wager', 120)">Claim</button>
+    </div>
+    <div class="rank-card">
+      <h3 class="rank-name">$150K Wager</h3>
+      <div class="rank-wager">Required Wager: <span style="font-weight: bold; color: white;">$150,000</span></div>
+      <div class="rank-reward">$175</div>
+      <button class="claim-button" onclick="claimReward('150K Wager', 175)">Claim</button>
+    </div>
+    <div class="rank-card">
+      <h3 class="rank-name">$200K Wager</h3>
+      <div class="rank-wager">Required Wager: <span style="font-weight: bold; color: white;">$200,000</span></div>
+      <div class="rank-reward">$250</div>
+      <button class="claim-button" onclick="claimReward('200K Wager', 250)">Claim</button>
+    </div>
+    <div class="rank-card">
+      <h3 class="rank-name">$250K Wager</h3>
+      <div class="rank-wager">Required Wager: <span style="font-weight: bold; color: white;">$250,000</span></div>
+      <div class="rank-reward">$300</div>
+      <button class="claim-button" onclick="claimReward('250K Wager', 300)">Claim</button>
+    </div>
+    <div class="rank-card">
+      <h3 class="rank-name">$325K Wager</h3>
+      <div class="rank-wager">Required Wager: <span style="font-weight: bold; color: white;">$325,000</span></div>
+      <div class="rank-reward">$400</div>
+      <button class="claim-button" onclick="claimReward('325K Wager', 400)">Claim</button>
+    </div>
+    <div class="rank-card">
+      <h3 class="rank-name">$400K Wager</h3>
+      <div class="rank-wager">Required Wager: <span style="font-weight: bold; color: white;">$400,000</span></div>
+      <div class="rank-reward">$500</div>
+      <button class="claim-button" onclick="claimReward('400K Wager', 500)">Claim</button>
+    </div>
+    <div class="rank-card">
+      <h3 class="rank-name">$500K Wager</h3>
+      <div class="rank-wager">Required Wager: <span style="font-weight: bold; color: white;">$500,000</span></div>
+      <div class="rank-reward">$1,000</div>
+      <button class="claim-button" onclick="claimReward('500K Wager', 1000)">Claim</button>
+    </div>
+  </div>
+</main>
 
-            <div class="col">
-                <span class="title">Info</span>
-                <a href="/"><span class="subtitle">Terms of Service</span></a>
-                <a href="/"><span class="subtitle">Privacy Policy</span></a>
-            </div>
+<script>
+function claimReward(wagerTitle, amount) {
+  const discordLink = "https://discord.gg/pU5NU7BnhH";
+  Swal.fire({
+    title: `<span style="color: var(--accent-gold);">Claim Reward: ${wagerTitle}</span>`,
+    html: `
+      <div style="text-align: left; color: #f0f0f0; font-size: 1.1em;">
+        <p style="margin-bottom: 0.5rem;">To claim your <b>$${amount.toLocaleString()}</b> reward:</p>
+        <ol style="margin-left: 1.5rem; text-align: left; padding-left: 0; list-style-position: inside;">
+          <li><span style="font-weight: bold; color: #7289DA;">Join our Discord server</span> to verify your wager.</li>
+          <li>Create a ticket in Discord and provide your wager proof/username.</li>
+        </ol>
+      </div>
+    `,
+    icon: 'info',
+    showCancelButton: true,
+    confirmButtonText: '<i class="fab fa-discord"></i> Join Discord',
+    cancelButtonText: 'Cancel',
+    confirmButtonColor: '#5865F2',
+    cancelButtonColor: '#36393f',
+    background: '#1a1a1a',
+    color: '#ffffff',
+    customClass: {
+      popup: 'swal2-dark-theme',
+      title: 'swal2-dark-title'
+    }
+  }).then((result) => {
+    if (result.isConfirmed) {
+      window.open(discordLink, '_blank');
+    }
+  });
+}
+</script>
 
-            <div class="col">
-                <span class="title">BeGambleAware.com</span>
-                <span class="subtitle" style="font-size: 9px;">Responsible Gambling Advisory: While gambling can be entertaining,
-                    it's crucial to be aware of the associated risks. Exercise self-control, set limits, and seek support if needed. Enjoy the excitement responsibly and prioritize your well-being. We are not responsible for any losses or damages caused by gambling.</span>
-            </div>
-        </div>
-    </footer>
+<script src="/js/app.js"></script>
+<script src="/js/particles.js"></script>
+<script src="/js/toast.js"></script>
 
-    <script>
-        function claimReward(wagerTitle, amount) {
-            const discordLink = "https://discord.gg/pU5NU7BnhH";
-            Swal.fire({
-                title: `<span style="color: var(--accent-gold);">Claim Reward: ${wagerTitle}</span>`,
-                html: `
-                  <div style="text-align: left; color: #f0f0f0; font-size: 1.1em;">
-                    <p style="margin-bottom: 0.5rem;">To claim your <b>$${amount.toLocaleString()}</b> reward:</p>
-                    <ol style="margin-left: 1.5rem; text-align: left; padding-left: 0; list-style-position: inside;">
-                      <li><span style="font-weight: bold; color: #7289DA;">Join our Discord server</span> to verify your wager.</li>
-                      <li>Create a ticket in Discord and provide your wager proof/username.</li>
-                    </ol>
-                  </div>
-                `,
-                icon: 'info',
-                showCancelButton: true,
-                confirmButtonText: '<i class="fab fa-discord"></i> Join Discord',
-                cancelButtonText: 'Cancel',
-                confirmButtonColor: '#5865F2',
-                cancelButtonColor: '#36393f',
-                background: '#1a1a1a',
-                color: '#ffffff'
-            }).then((result) => {
-                if (result.isConfirmed) {
-                    window.open(discordLink, '_blank');
-                }
-            });
-        }
-    </script>
 </body>
-
 </html>
