--- a/rewards/index.html
+++ b/rewards/index.html
@@ -192,96 +192,93 @@
                 display: none;
             }
         }
-        /* Center main section and heading */
+body {
+  background: #121212;
+}
+
 .rank-rewards-section {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 25px;
   padding: 40px 10px;
-  background: #121212;
   min-height: 100vh;
+  background: rgba(20, 20, 20, 0.65);
   box-sizing: border-box;
-}
-
-.bonus-title {
-  color: #00bfff;
-  font-size: 2.5rem;
-  font-weight: 700;
-  letter-spacing: 2px;
-  text-align: center;
-  margin: 0;
-  text-shadow: 0 0 20px #00bfff88;
+  /* For transparency effect */
 }
 
 .rank-rewards-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-  gap: 20px;
+  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+  gap: 26px;
   width: 100%;
   max-width: 1200px;
   padding: 0 15px;
 }
 
-/* Card style */
 .rank-card {
-  background: linear-gradient(135deg, #1e2a78, #00bfff);
-  border-radius: 15px;
-  padding: 20px 25px;
+  background: linear-gradient(135deg, rgba(20,50,80,0.72) 70%, rgba(0,255,255,0.13) 100%);
+  border-radius: 20px;
+  padding: 28px 30px;
   color: white;
-  box-shadow: 0 4px 15px rgba(0, 191, 255, 0.4);
+  box-shadow: 0 4px 24px 0 rgba(0, 191, 255, 0.13), 0 1.5px 10px 0 rgba(0,255,255,0.2);
+  border: 1.5px solid rgba(0,255,255,0.18);
   text-align: center;
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  backdrop-filter: blur(7px);
+  transition: transform 0.27s cubic-bezier(0.2,0.7,0.4,1), box-shadow .27s;
   cursor: default;
-  user-select: none;
 }
 
 .rank-card:hover {
-  transform: translateY(-10px);
-  box-shadow: 0 8px 30px rgba(0, 191, 255, 0.7);
+  transform: translateY(-10px) scale(1.03);
+  box-shadow: 0 12px 36px 2px rgba(0,255,255,0.25),0 2px 24px 0 rgba(0,191,255,0.24);
 }
 
 .rank-name {
-  font-size: 1.8rem;
-  font-weight: 700;
+  font-size: 1.7rem;
+  font-weight: 800;
   margin-bottom: 10px;
-  text-shadow: 0 0 10px #00bfffaa;
+  text-shadow: 0 0 17px #05e3ff, 0 1.5px 10px #05e3ff4a;
 }
 
 .rank-wager span {
   font-weight: 700;
   color: #ffec99;
   font-size: 1.1rem;
+  text-shadow: 0 0 4px #f6e58d98;
 }
-
 .rank-wager,
 .rank-reward {
-  font-size: 1.2rem;
+  font-size: 1.16rem;
   margin: 8px 0;
 }
 
 .rank-reward {
   font-weight: 900;
-  color: #00ffea;
-  text-shadow: 0 0 10px #00ffeaea;
+  color: #2affbd;
+  font-size: 1.19rem;
+  letter-spacing: 1.1px;
+  text-shadow: 0 0 8px #1effd27a, 0 1px 4px #1effd2b2;
 }
 
 .claim-button {
-  background: #00bfff;
+  background: linear-gradient(90deg,#00bfff,#2affbd 92%);
   border: none;
   border-radius: 8px;
-  color: white;
-  font-weight: 700;
-  font-size: 1.1rem;
-  padding: 10px 20px;
-  margin-top: 10px;
-  box-shadow: 0 4px 15px rgba(0, 191, 255, 0.7);
+  color: #111;
+  font-weight: 800;
+  font-size: 1.13rem;
+  padding: 12px 26px;
+  margin-top: 12px;
+  box-shadow: 0 3px 18px rgba(0,255,255,0.20);
   cursor: pointer;
-  transition: background-color 0.25s ease;
+  transition: background .23s, color .18s;
+  outline: none;
 }
-
 .claim-button:hover {
-  background-color: #0099cc;
+  background: linear-gradient(90deg,#2affbd 65%, #00bfff 100%);
+  color: #003f47;
 }
 
     </style>
